# rig-graph

./: Cargo.toml  README.md
demos/insurance-claims-service/: Cargo.toml
demos/insurance-claims-service/src/: main.rs
demos/insurance-claims-service/src/tasks/: README.md  apartment_insurance_details.rs  car_insurance_details.rs  final_summary.rs  initial_claim_query.rs  insurance_type_classifier.rs  mod.rs  smart_claim_validator.rs  types.rs  utils.rs
demos/medical-document-service/: Cargo.toml  README.md
demos/medical-document-service/src/: lib.rs  main.rs  models.rs  service.rs  workflow.rs
demos/medical-document-service/src/tasks/: human_review.rs  mod.rs  pdf_extract.rs  research_search.rs  summary_integration.rs  utils.rs
demos/recommendation-service/: Cargo.toml  README.md
demos/recommendation-service/src/: main.rs
demos/recommendation-service/src/tasks/: answer_generation.rs  delivery.rs  mod.rs  query_refinement.rs  types.rs  utils.rs  validation.rs  vector_search.rs
graph-flow/: Cargo.toml
graph-flow/src/: graph.rs
