[workspace]
members = [
    "graph-flow",
    # "insurance-claims-service",
    # "examples",
    # "recommendation-service",
    # "medical-document-service",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.1"
rig-core = "0.31.0"
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "uuid"] }
pdf2image = "0.1"
