[package]
name = "insurance-claims-service"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-flow = { path = "../graph-flow", features = ["rig"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rig-core = { workspace = true }
tokio = { workspace = true }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.1"