[package]
name = "medical-document-service"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-flow = { path = "../graph-flow", features = ["rig"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rig-core = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
base64 = "0.22"
image = "0.25"
pdf2image = { workspace = true }

[dev-dependencies]