[package]
name = "recommendation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
graph-flow = { path = "../graph-flow", features = ["rig"] }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
rig-core = { workspace = true }
fastembed = "5.1.0" 